added firebase auth

--- a/components/CreateAccount/CreateAccountCard.css
+++ b/components/CreateAccount/CreateAccountCard.css
@@ -3,7 +3,7 @@
   border: 0.75px solid #aea598;
   border-radius: 1rem;
   display: grid;
-  gap: 3rem;
+  gap: 2rem;
   margin: 2rem auto auto auto;
   max-width: 50rem;
   padding: 4rem 2rem;
@@ -14,8 +14,27 @@
   gap: 2rem;
 }
 
-.create-account-form label {
+.create-account-card-message {
   font-size: 1.4rem;
+  font-style: italic;
+  height: 1.6rem;
+}
+
+.create-account-email-header,
+.create-account-password-header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.create-account-form label {
+  font-size: 1.6rem;
+}
+
+.create-account-email-input-message,
+.create-account-password-input-message {
+  font-size: 1.4rem;
+  font-style: italic;
 }
 
 .create-account-form input {
@@ -38,24 +57,4 @@
 
 .login-link:hover {
   cursor: pointer;
-}
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
 }
