--- a/pages/Home.css
+++ b/pages/Home.css
@@ -1,3 +1,7 @@
+.log-out {
+  text-decoration: underline;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 }
