--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ h3 {
 
 h1 {
   font-size: 2.8rem;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 h2 {
@@ -115,6 +115,18 @@ li {
 img {
   border-radius: 1rem;
   width: 100%;
+}
+
+hr {
+  border: 0.75px solid #d7d2cc;
+}
+
+.success {
+  color: green;
+}
+
+.error {
+  color: red;
 }
 
 :disabled {
