--- a/pages/Home.css
+++ b/pages/Home.css
@@ -2,6 +2,10 @@
   text-decoration: underline;
 }
 
+.log-out:hover {
+  cursor: pointer;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 }
