--- a/components/CreateAccount/CreateAccountCard.css
+++ b/components/CreateAccount/CreateAccountCard.css
@@ -18,6 +18,7 @@
   font-size: 1.4rem;
   font-style: italic;
   height: 1.6rem;
+  text-align: center;
 }
 
 .create-account-email-header,
@@ -33,7 +34,7 @@
 
 .create-account-email-input-message,
 .create-account-password-input-message {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-style: italic;
 }
 
