--- a/components/Login/LoginCard.css
+++ b/components/Login/LoginCard.css
@@ -18,6 +18,7 @@
   font-size: 1.4rem;
   font-style: italic;
   height: 1.6rem;
+  text-align: center;
 }
 
 .login-email-header,
@@ -28,12 +29,6 @@
 
 .login-form label {
   font-size: 1.6rem;
-}
-
-.login-email-input-message,
-.login-password-input-message {
-  font-size: 1.4rem;
-  font-style: italic;
 }
 
 .login-form input {
@@ -58,7 +53,6 @@
   color: var(--color-medium);
   cursor: pointer;
 }
-
 
 .continue-with-google-btn {
   align-items: center;
