--- a/components/Layout/Header.css
+++ b/components/Layout/Header.css
@@ -8,16 +8,13 @@ header {
   justify-content: center;
 }
 
-.logo-icon {
-  width: 2.1rem;
-}
-
 .logo-text {
   color: var(--color-medium);
   font-family: var(--font-secondary);
   font-size: 2rem;
-  font-weight: 500;
+  font-weight: 600;
   margin-left: 0.375rem;
+  text-transform: uppercase;
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
