--- a/components/Layout/Layout.css
+++ b/components/Layout/Layout.css
@@ -1,5 +1,5 @@
 main {
-  padding: 2rem;
+  padding: 0rem 2rem 2rem 2rem;
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -13,14 +13,14 @@ main {
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   main {
-    padding: 2rem 10rem;
+    padding: 0rem 10rem 2rem 10rem;
   }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   main {
-    padding: 2rem 25rem;
+    padding: 2rem 25rem 2rem 25rem;
   }
 }
 
