--- a/components/Login/LoginCard.css
+++ b/components/Login/LoginCard.css
@@ -32,8 +32,18 @@
   font-size: 1.6rem;
 }
 
+.toggle-password-visibility-btn {
+  color: #b7afa4;
+  font-weight: 500;
+  padding: 0;
+}
+
+.toggle-password-visibility-btn:hover {
+  opacity: 1;
+}
+
 .login-form input {
-  margin-top: 0.5rem;
+  margin-top: 0.75rem;
 }
 
 .login-btn {
