--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ h3 {
 
 h1 {
   font-size: 2.8rem;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 h2 {
@@ -55,7 +55,9 @@ h2 {
 }
 
 h3 {
+  font-family: var(--font-primary);
   font-size: 2rem;
+  text-transform: uppercase;
 }
 
 p,
@@ -83,8 +85,19 @@ input {
   color: var(--color-bold);
 }
 
+textarea {
+  border-radius: 0.675rem;
+  font-family: var(--font-primary);
+  font-size: 1.6rem;
+  max-height: 56rem;
+  min-height: 28rem;
+  padding: 1rem;
+  resize: none;
+  width: 100%;
+}
+
 ::placeholder {
-  color: var(--color-bold);
+  color: #b7afa4;
 }
 
 button {
@@ -143,7 +156,7 @@ hr {
 }
 
 .animate__animated.animate__fadeIn {
-  --animate-duration: 1.5s;
+  --animate-duration: 1s;
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -157,7 +170,7 @@ hr {
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   h1 {
-    font-size: 3.2rem;
+    font-size: 3.6rem;
   }
 
   h2 {
@@ -171,6 +184,9 @@ hr {
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  textarea {
+    padding: 2rem;
+  }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
