--- a/components/Home/CheckInFormAndList.css
+++ b/components/Home/CheckInFormAndList.css
@@ -9,6 +9,10 @@
   height: 1.4rem;
 }
 
+.current-feeling {
+  margin-bottom: 2rem;
+}
+
 .checkin-form-btn {
   background-color: var(--color-bold);
   font-size: 1.8rem;
@@ -21,7 +25,7 @@
 .length {
   color: var(--color-medium);
   font-style: italic;
-  margin-top: 2rem;
+  margin-top: 3rem;
   text-align: center;
 }
 
@@ -31,6 +35,7 @@
   background-color: var(--color-extralight);
   border: 1px solid #aea598;
   border-radius: 0.75rem;
+  gap: 2rem;
   padding: 1.5rem;
 }
 
