--- a/pages/Home.css
+++ b/pages/Home.css
@@ -27,6 +27,7 @@
   color: var(--color-medium);
   font-size: 1.4rem;
   font-weight: 600;
+  margin-bottom: 3rem;
   text-align: center;
   text-transform: uppercase;
 }
