--- a/components/CreateAccount/CreateAccountCard.css
+++ b/components/CreateAccount/CreateAccountCard.css
@@ -2,6 +2,7 @@
   background-color: var(--color-extralight);
   border: 0.75px solid #aea598;
   border-radius: 1rem;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   display: grid;
   gap: 2rem;
   margin: 2rem auto auto auto;
