--- a/index.css
+++ b/index.css
@@ -46,17 +46,17 @@ h3 {
 }
 
 h1 {
-  font-size: 2.8rem;
+  font-size: 3rem;
   font-weight: 500;
 }
 
 h2 {
-  font-size: 2.4rem;
+  font-size: 2.6rem;
 }
 
 h3 {
   font-family: var(--font-primary);
-  font-size: 2rem;
+  font-size: 2.2rem;
   text-transform: uppercase;
 }
 
@@ -94,9 +94,9 @@ fieldset {
 
 textarea {
   border-radius: 0.675rem;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   font-family: var(--font-primary);
   font-size: 1.6rem;
-  height: 20rem;
   padding: 2rem;
   resize: none;
   width: 100%;
@@ -114,7 +114,7 @@ button {
 
 button:hover {
   cursor: pointer;
-  opacity: 0.675;
+  opacity: 0.5;
 }
 
 p {
@@ -138,6 +138,14 @@ img {
 
 hr {
   border: 0.75px solid #d7d2cc;
+}
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
 }
 
 .success {
@@ -180,11 +188,11 @@ hr {
   }
 
   h2 {
-    font-size: 2.8rem;
+    font-size: 3.2rem;
   }
 
   h3 {
-    font-size: 2.4rem;
+    font-size: 2.8rem;
   }
 }
 
