--- a/components/Home/CheckInListModal.css
+++ b/components/Home/CheckInListModal.css
@@ -1,34 +1,25 @@
 .check-list-modal-container {
+  align-items: center;
   background-color: var(--color-light);
+  display: flex;
+  height: 100vh;
+  justify-content: center;
   left: 0;
-  margin: auto;
-  overflow-y: scroll;
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 100%;
   position: fixed;
   top: 0;
-  left: 0;
   width: 100vw;
-  height: 100vh;
-  overflow-y: auto;
-  z-index: 1000;
-  padding: 2rem;
 }
 
 .checkin-list-container {
   background-color: var(--color-light);
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  left: 0;
+  overflow-y: auto;
+  padding: 4rem 2rem;
   position: fixed;
   top: 0;
-  left: 0;
   width: 100vw;
-  height: 100vh;
-  overflow-y: auto;
-  z-index: 1000;
-  padding: 2rem;
+  z-index: 2000;
 }
 
 .close-checkin-list-modal-btn {
@@ -106,7 +97,7 @@
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   .checkin-list-container {
-    padding: 2rem 10rem;
+    padding: 4rem 10rem;
   }
   .check-in-list-item-snippet {
     font-family: var(--font-secondary);
@@ -117,7 +108,7 @@
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   .checkin-list-container {
-    padding: 2rem 20rem;
+    padding: 4rem 20rem;
   }
 }
 
