checklist item and textarea update

--- a/index.css
+++ b/index.css
@@ -83,6 +83,7 @@ fieldset {
 }
 
 textarea {
+  border: 0.75px solid gray;
   border-radius: 0.675rem;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   font-family: var(--font-primary);
