--- a/components/Home/CheckInListModal.css
+++ b/components/Home/CheckInListModal.css
@@ -14,7 +14,7 @@
   background-color: var(--color-light);
   height: 100vh;
   left: 0;
-  overflow-y: auto;
+  overflow-y: scroll;
   padding: 4rem 2rem;
   position: fixed;
   top: 0;
