--- a/components/Home/CheckInListModal.css
+++ b/components/Home/CheckInListModal.css
@@ -15,7 +15,7 @@
   height: 100vh;
   left: 0;
   overflow-y: scroll;
-  padding: 4rem 2rem;
+  padding: 4rem 2rem 6rem 2rem;
   position: fixed;
   top: 0;
   width: 100vw;
