--- a/components/Home/CheckInListModal.css
+++ b/components/Home/CheckInListModal.css
@@ -14,8 +14,8 @@
   background-color: var(--color-light);
   height: 100vh;
   left: 0;
-  overflow-y: scroll;
-  padding: 4rem 2rem 6rem 2rem;
+  overflow-y: auto;
+  padding: 4rem 2rem;
   position: fixed;
   top: 0;
   width: 100vw;
@@ -37,7 +37,7 @@
 .checkin-list-scroll-wrapper {
   overflow-y: auto;
   max-height: calc(100vh - 10rem);
-  padding-bottom: 2rem;
+  padding-bottom: 4rem;
 }
 
 .no-checkins-message {
