--- a/components/Home/CheckInListModal.css
+++ b/components/Home/CheckInListModal.css
@@ -40,15 +40,16 @@
 }
 
 .checkin-list-scroll-wrapper {
-  overflow-y: auto;
   margin-top: 2rem;
   max-height: calc(100vh - 10rem);
+  overflow-y: auto;
   padding-bottom: 10rem;
 }
 
 .no-checkins-message {
+  font-size: 1.5rem;
   font-style: italic;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 .check-ins-list {
