--- a/index.css
+++ b/index.css
@@ -165,6 +165,10 @@ hr {
   --animate-duration: 1s;
 }
 
+:disabled {
+  background-color: black;
+}
+
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   h1 {
